--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ input[type="text"], input[type="password"], input[type="email"], textarea{
   margin:1em;
 }
 
-.message--header{
+.message--hea r{
   display: flex;
   justify-content: space-between;
   align-items: center;
